# Abs

./: .env.demo  .env.example  .fs-scan-allowlist.yaml  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSONS.md  LICENSE  NOTICE.md  README.es.md  README.md  README.tr.md  SECURITY.md  UPGRADE.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json
core/backend/: .env.example  Dockerfile  alembic.ini  inngest.json  pyproject.toml  requirements.txt
core/backend/alembic/: env.py  script.py.mako
core/backend/alembic/versions/: 0000_init_baseline.py  0001_oauth_baseline.py  0002_oauth_extra_claims.py  0003_tenant_projects.py  0005_usage_log.py  0006_users_magic_link.py  (+11 more)
core/backend/app/: config.py  main.py
core/backend/scripts/: entrypoint.sh  provider_drift_check.py  provider_drift_probe.py
core/backend/tests/: conftest.py  test_029_compliance_tool.py  test_029_gdpr_account.py  test_029_gdpr_consent.py  test_029_gdpr_data_export.py  test_030_compound_tools.py  test_030_legal_banner.py  test_030_news_digest.py  test_030_provider_catalog.py  test_030_smoke_inventory.py  test_030_systemd_units.py  test_030_upper_tier_tools.py  test_031_beta_admin.py  test_031_beta_metrics_mcp.py  test_031_beta_portal.py  test_031_beta_sequence.py  test_031_discord_beta.py  test_031_email_templates.py  test_031_outreach_doc.py  test_031_status_enhanced.py  test_032_admin_analytics.py  test_032_admin_auth.py  test_032_admin_dashboard.py  test_032_admin_docs.py  test_032_admin_overview_mcp.py  test_033_demo_assets.py  test_033_demo_mode.py  test_033_mock_providers.py  test_033_panel_apis.py  test_033_seed_demo.py  test_2n_customer_compose_postgres.py  test_2n_customer_pkg_mount_audit.py  test_2n_p1_fixes.py  test_admin_providers_status.py  test_admin_settings_store.py  test_annual_billing_sku.py  test_auth.py  test_auto_verify.py  test_beta_license_generator.py  test_billing_portal.py  (+349 more)
(+1478 files in other folders)
